samples/_failures_safe/1761600657_6d86d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd9fd56a.c: In function ‘main’:
./samples/SAFE/__tmp_fd9fd56a.c:157:9: error: expected declaration or statement at end of input
  157 |         }
      |         ^
./samples/SAFE/__tmp_fd9fd56a.c:157:9: error: expected declaration or statement at end of input
